# dig-app

./: .bls-migration-wip  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEVELOPMENT_LOG.md  README.md  SPEC.md
.github/workflows/: build-binaries.yml  ci.yml  nightly-release.yml  release.yml
crates/dig-app/: Cargo.toml
crates/dig-app-core/: Cargo.toml
crates/dig-app-core/src/: agent.rs  config.rs  confirm.rs  decode.rs  engine.rs  environment.rs  events.rs  form_factor.rs  gateway.rs  identity.rs  ipc.rs  keystore.rs  lib.rs  onboarding.rs  pairing.rs  profiles.rs  sealer.rs  session.rs  session_lock.rs  shutdown.rs  sign_policy.rs  sign_service.rs  spend_summary.rs  storage.rs  test_support.rs  wallet.rs  whitelist.rs
crates/dig-app-core/src/account/: auth.rs  boot.rs  ceremony.rs  lifecycle.rs  mod.rs  money.rs  registry.rs  residency.rs  sealer.rs
crates/dig-app-core/src/confirm/: linux.rs  macos.rs  mod.rs  windows.rs
crates/dig-app-core/src/events/: driver.rs  mod.rs  view.rs
crates/dig-app-core/src/gateway/: command.rs  engine.rs  local.rs  mod.rs  outcome.rs
crates/dig-app-core/src/keystore/: credential.rs  mod.rs  secrets.rs  vault.rs
crates/dig-app-core/src/loopback/: dispatch.rs  guard.rs  mod.rs  persist.rs
crates/dig-app-core/src/notify/: mod.rs  render.rs
crates/dig-app-core/src/profiles/: data.rs  error.rs  identity_store.rs  keygen_provisioner.rs  keystore_sealer.rs  manager.rs  metadata.rs  mod.rs  provision.rs  sealer.rs
crates/dig-app-core/src/wallet/: engine.rs  mod.rs  signing.rs  spend.rs  state.rs
crates/dig-app-core/tests/: bls_ipc_session.rs  dek_byte_contract.rs  master_seed_acceptance.rs  never_log.rs  no_user_key_on_wire.rs  wallet_key_byte_contract.rs
crates/dig-app/src/: autostart.rs  lib.rs  logging.rs
crates/dign/: Cargo.toml
crates/dign/src/: cli.rs  main.rs
