# dig-app — the DIG user app / identity hub (epic dig_ecosystem#908).
#
# A Cargo workspace with two members, mirroring the #908 form-factor split:
#   * `dig-app-core` — the HEADLESS per-user identity-agent LIBRARY (identity/keys/profiles/
#     wallet/storage/IPC/gateway). This is the real component; it degrades headless on a GUI-less
#     host. U3+ implement its modules.
#   * `dig-app`      — the thin binaries built on the core: the branded tray/menu-bar shell
#     (`dig-app`) and the user CLI (`dign`). Both are thin entrypoints so all logic (and its test
#     coverage) lives in the core library.
#
# The single workspace version is the source of truth for the release pipeline (the release
# workflows read `[workspace.package].version`).
[workspace]
resolver = "2"
members = ["crates/dig-app-core", "crates/dig-app"]

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
license = "GPL-2.0-only"
repository = "https://github.com/DIG-Network/dig-app"
authors = ["DIG Network"]

[workspace.dependencies]
dig-app-core = { path = "crates/dig-app-core" }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
# Cross-platform desktop tray / menu-bar shell (Windows system tray · macOS menu-bar · Linux
# AppIndicator/StatusNotifier). `tao` provides the platform event loop the tray icon needs to pump
# its events; the native menu comes from `tray-icon`'s re-exported `muda`. The tray is the `dig-app`
# crate's default `tray` feature; disable it (`--no-default-features`) to build the pure headless
# agent with no desktop stack.
tray-icon = "0.19"
tao = "0.30"
