# dig-app — the DIG user app / identity hub (epic dig_ecosystem#908).
#
# A Cargo workspace mirroring the #908 form-factor split:
#   * `dig-app-core` — the HEADLESS per-user identity-agent LIBRARY (identity/keys/profiles/
#     wallet/storage/IPC/gateway). This is the real component; it degrades headless on a GUI-less
#     host. U3+ implement its modules.
#   * `dig-app`      — the branded tray/menu-bar shell binary built on the core.
#   * `dign`         — the DIG user CLI binary (U7), migrated from dig-node. Both binary crates are
#     thin entrypoints so all logic (and its test coverage) lives in the core library.
#
# The single workspace version is the source of truth for the release pipeline (the release
# workflows read `[workspace.package].version`).
[workspace]
resolver = "2"
members = ["crates/dig-app-core", "crates/dig-app", "crates/dign"]

[workspace.package]
version = "0.17.0"
edition = "2021"
rust-version = "1.75"
license = "GPL-2.0-only"
repository = "https://github.com/DIG-Network/dig-app"
authors = ["DIG Network"]

[workspace.dependencies]
dig-app-core = { path = "crates/dig-app-core" }
# The `tracing` facade every module in this workspace emits events through. `dig-app-core` (and every
# other library crate) depends on ONLY this — never `dig-logging` directly — so the engine-agnostic
# core stays subscriber-agnostic; the `dig-app`/`dign` binary shells are the ones that install a
# subscriber (see `dig-logging` below), mirroring the dig-node split (dig-node-core: tracing only,
# dig-node-service: dig-logging + the init).
tracing = "0.1"
# The shared logging building block (dig_ecosystem#547/#934) — the ONE place `dig-app`/`dign` get
# their dual JSONL-file + human-stderr sink, per-OS log dir, EnvFilter precedence, and `logs` CLI
# verbs from, so the layout is byte-identical to dig-node/dig-dns/dig-updater. Sourced from crates.io
# (no git/path dep) per the ecosystem crates.io policy (#681).
dig-logging = "0.1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
# Deterministic CSPRNG for tests only — pins seeded identity keys so key-management tests are
# reproducible (never used in production code, which uses the OS CSPRNG).
rand_chacha = "0.3"
# Key management (U4). At-rest sealing is delegated to the audited dig-keystore `opaque` module
# (DIGOP1 = AES-256-GCM + Argon2id); the identity keys are the dig-identity Ed25519 (slot 0x0010) +
# X25519 (slot 0x0011) primitives from the maintained dalek crates; the OS credential store is
# reached through the cross-platform `keyring` crate. NONE of the crypto is hand-rolled.
dig-keystore = "0.3"
ed25519-dalek = { version = "2", features = ["zeroize", "rand_core"] }
x25519-dalek = { version = "2", features = ["static_secrets", "zeroize"] }
hkdf = "0.12"
# sha256 — the per-profile DEK HKDF (U4) and the per-profile AppData directory key (U5, a hash of the
# profile DID). Pinned to the ecosystem 0.10 line so the hash byte-agrees with dig-identity's own
# slot-key derivation.
sha2 = "0.10"
zeroize = { version = "1", features = ["derive"] }
rand_core = { version = "0.6", features = ["getrandom"] }
base64 = "0.22"
# The OS credential store abstraction — used as the custody PRIMARY on Windows (Credential Manager)
# and macOS (Keychain) ONLY, because those backends gate access per-application. Linux is
# deliberately EXCLUDED: the kernel keyutils session keyring is readable by any same-UID process in
# the session (no per-app ACL) AND is non-persistent across reboot/logout, so it is unsafe as a
# custody primary — on Linux the passphrase-sealed file is the primary instead (see the `keystore`
# module). `keyring` is a TARGET-SPECIFIC dependency (the crate manifest gates it to windows/macos),
# so it is never compiled on Linux and pulls no dbus/libsecret system libraries there.
# `default-features = false` + only the per-OS native backends keeps CI builds free of system libs.
keyring = { version = "3", default-features = false, features = [
    "windows-native",
    "apple-native",
] }
# The canonical DIG decentralized-identity profile FORMAT (dig_ecosystem#771): the `did:chia:` DID +
# the additive sparse-merkle-tree of profile slots. dig-app CONSUMES this format for profile
# metadata (never reinvents the SMT/slots); pinned release-first to the v0.1.0 tag.
dig-identity = { git = "https://github.com/DIG-Network/dig-identity", tag = "v0.1.0" }
# Lowercase-hex encoding of public keys + the DID directory hash in the human-readable registry.
hex = "0.4"
# Wallet host (U8) — the CANONICAL DIG spend builder + the Chia types/driver/signer it works in.
# All pinned to the same chia-* 0.26 / chia-sdk-* 0.30 line chip35 itself uses, so the types are
# byte-compatible. NO spend bundle is hand-rolled: every $DIG spend is built by chip35 (the canonical
# CHIP-0035 spend builder), signed locally with the chia-wallet-sdk signer, and the DIG treasury
# constant reused from chip35 — never a placeholder.
chip35-dl-coin = "0.8"
chia-bls = "0.26"
chia-protocol = "0.26"
chia-puzzle-types = "0.26"
chia-sdk-driver = "0.30"
chia-sdk-signer = "0.30"
chia-sdk-types = "0.30"
chia-traits = "0.26"
clvm-traits = "0.26"
clvmr = "0.14"
hex-literal = "0.4"
# Canonical `xch1…`/`did:chia:` bech32m address encoding (wallet receive address; also the
# profile-management test helper).
chia-sdk-utils = "0.30"
# Cross-platform desktop tray / menu-bar shell (Windows system tray · macOS menu-bar · Linux
# AppIndicator/StatusNotifier). `tao` provides the platform event loop the tray icon needs to pump
# its events; the native menu comes from `tray-icon`'s re-exported `muda`. The tray is the `dig-app`
# crate's default `tray` feature; disable it (`--no-default-features`) to build the pure headless
# agent with no desktop stack.
tray-icon = "0.19"
tao = "0.30"
# APP-SIGN loopback identity channel (SIGN-1, dig_ecosystem#950, SPEC §5.6). The extension↔dig-app
# paired WebSocket server lives in `dig-app-core::loopback`, so the async runtime + WS + HMAC + uuid
# deps are declared here and consumed there. `tokio` drives the loopback listeners; `tokio-tungstenite`
# speaks the WebSocket JSON-RPC wire; `futures-util` supplies the Stream/Sink combinators; `hmac`
# provides the per-frame pairing-token MAC with a CONSTANT-TIME `verify_slice` (never a hand-rolled
# byte compare); `uuid` mints the opaque `pairing_id`. No hand-rolled crypto — the MAC is RustCrypto
# `hmac` over `sha2` (already a workspace dep).
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
tokio-tungstenite = "0.24"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
hmac = "0.12"
uuid = { version = "1", features = ["v4"] }

# Per-OS native confirm window + biometric (SIGN-3, dig_ecosystem#950, SPEC §5.6.5). Each is a
# TARGET-SPECIFIC dependency gated in the crate manifest, so it is compiled ONLY on its own platform
# and never taxes the other builds. On Windows the `windows` crate provides the WinRT
# `UserConsentVerifier` (Windows Hello) + the Win32 `MessageBoxW` foreground consent window. On macOS
# `objc2` + AppKit draw the floating `NSAlert` and `objc2-local-authentication` drives Touch ID via
# `LAContext`; `block2` bridges the async `evaluatePolicy` reply block to a blocking call. Linux uses
# no native crate — it drives the desktop dialog helper + polkit `pkcheck` as subprocesses.
windows = { version = "0.58", features = [
    "Foundation",
    "Security_Credentials_UI",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_RemoteDesktop",
    "Win32_UI_WindowsAndMessaging",
] }
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = [
    "NSString",
    "NSError",
    "NSNotification",
    "NSDistributedNotificationCenter",
    "NSOperation",
    "block2",
] }
objc2-app-kit = { version = "0.3", features = [
    "NSAlert",
    "NSApplication",
    "NSButton",
    "NSControl",
    "NSResponder",
    "NSView",
] }
objc2-local-authentication = { version = "0.3", features = ["LAContext", "block2"] }
block2 = "0.6"
# libdispatch binding — hops the AppKit confirm window to the main thread (`run_on_main`) since the
# loopback server calls the confirmer from a worker task but AppKit is main-thread-only.
dispatch2 = "0.3"
