# The headless per-user identity-agent CORE (epic dig_ecosystem#908). Everything identity-specific
# lives here — key management, DID/profiles, wallet host, per-user encrypted AppData, the
# identity-authenticated IPC session to the engine, and the CLI/RPC gateway. The tray/CLI binaries
# in the sibling `dig-app` crate are thin shells over this library, so all logic + its test coverage
# is centralized here.
#
# U1 (this WU) delivers the module skeleton + the small set of pure, fully-tested helpers the
# architecture needs day one (form-factor detection, per-OS AppData paths, IPC channel paths). The
# security-critical subsystems (keystore/profiles/session) are doc-commented stubs U4/U5/U6 implement
# to the SPEC.
[package]
name = "dig-app-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "The DIG user-app identity-agent core: key management, DID/profiles, wallet, per-user encrypted AppData, identity-authenticated engine IPC, and the CLI/RPC gateway. The identity half of the engine/identity split (dig_ecosystem#908)."

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
# The logging FACADE (#934) every module below emits lifecycle/diagnostic events through. This crate
# never depends on `dig-logging` itself — installing a subscriber is a process-wide decision that
# belongs to the `dig-app`/`dign` binary shells (see the workspace manifest for why).
tracing.workspace = true
# Key management (U4) — see the workspace manifest for why each is chosen. No hand-rolled crypto.
dig-keystore.workspace = true
ed25519-dalek.workspace = true
x25519-dalek.workspace = true
hkdf.workspace = true
sha2.workspace = true
zeroize.workspace = true
rand_core.workspace = true
base64.workspace = true
# Profiles (U5) — the canonical `did:chia:` profile FORMAT (consumed, never reinvented) + hex
# encoding for the human-readable registry.
dig-identity.workspace = true
hex.workspace = true

# The OS credential store is the custody PRIMARY on Windows + macOS only (per-application access
# gating). It is deliberately NOT a dependency on Linux: keyutils is same-UID-readable + volatile, so
# Linux uses the passphrase-sealed file as its custody primary instead (see `keystore`). Gating the
# dependency by target means `keyring` is never compiled on Linux — no dbus/libsecret build tax.
[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
keyring.workspace = true

[dev-dependencies]
tempfile.workspace = true
rand_chacha.workspace = true
chia-sdk-utils.workspace = true
# Capturing subscriber for the never-log regression tests (#934, dig-logging SPEC §7): a `fmt` layer
# writing into an in-memory buffer so a test can assert emitted records never contain secret values
# (a passphrase, a raw identity key). Pinned to the same 0.3 line `dig-logging` builds on.
tracing-subscriber = { version = "0.3", features = ["fmt"] }
