# `dign` — the DIG user CLI (epic dig_ecosystem#908, U7).
#
# `dign` is the DIG USER command line, owned by dig-app and migrated from dig-node (SPEC §3.5). It is
# a THIN shell over `dig-app-core`'s `gateway` module: it parses the invocation, hands it to the
# gateway, and renders the result (pretty by default, `--json` for machines). Every command routes
# THROUGH the gateway, which decides — per SPEC — whether to serve it LOCALLY with the user identity
# (sign / profiles / wallet) or PROXY it over the identity-authenticated session to the engine
# (info / config / cache / stores / sync / subscriptions / peers / pair / open).
#
# All real logic + its coverage lives in `dig-app-core`; this binary stays a thin entrypoint (it is
# excluded from the line-coverage gate for the same reason the tray shell is).
[package]
name = "dign"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "The DIG user CLI (`dign`): the user-identity front door that routes commands through the dig-app gateway — local identity ops or proxied engine work (dig_ecosystem#908)."

[[bin]]
name = "dign"
path = "src/main.rs"

[dependencies]
dig-app-core.workspace = true
